2020.01.21_02 1. prevent horizontal scrolling on mobile web

--- a/src/styles/intro.css
+++ b/src/styles/intro.css
@@ -1,6 +1,14 @@
+html,
+body {
+  overflow-x: hidden;
+}
+body {
+  position: relative;
+}
+
 body {
   margin: 0;
-  overflow-x: hidden;
+  height: 100%;
 }
 
 .intro {
@@ -21,15 +29,18 @@ body {
   right: -50%;
   top: 0;
   z-index: -1;
+  overflow-x: hidden !important;
 }
 
 .bg2 {
   animation-direction: alternate-reverse;
   animation-duration: 4s;
+  overflow-x: hidden !important;
 }
 
 .bg3 {
   animation-duration: 5s;
+  overflow-x: hidden !important;
 }
 
 .content {
